# marketsymbol

./: .gitignore  CLAUDE.md
.claude/: hookify.implicit-fallback-python.local.md  hookify.implicit-fallback-rust.local.md  hookify.magic-numbers-python.local.md  hookify.magic-numbers-rust.local.md  workflow-config.json
.specify/memory/: constitution.md
docs/: conf.py  glossary.md  index.md
docs/adr/: index.md
docs/adr/symbol/: 001-symbol-specification.md  002-weekly-expiry-format.md
docs/api/: adapter.md  enums.md  errors.md  index.md  parser.md  symbol.md
docs/guides/: adapter-implementation.md  getting-started.md  index.md  symbol-format.md
docs/research/: index.md
python/: README.md  pyproject.toml
python/src/marketsymbol/: __init__.py  adapter.py  constants.py  enums.py  errors.py  parser.py  symbol.py  validator.py
python/tests/: conftest.py  test_adapter.py  test_enums.py  test_errors.py  test_parser.py  test_performance.py  test_placeholder.py  test_symbol.py  test_validator.py
specs/001-marketsymbol/: spec.md
specs/001-marketsymbol/checklists/: requirements.md
specs/002-marketsymbol-python/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-marketsymbol-python/checklists/: requirements.md
