[project]
name = "marketsymbol"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
marketsymbol = "marketsymbol:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
